SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mclong
Tag Date:    3 Dec 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20141203
Tag Summary: More flexibility in ecosys tracer count, specifically zooplankton
             and autotroph count.

Files Modified:
M       source/ecosys_share.F90
M       source/ecosys_mod.F90
M       source/ecosys_parms.F90
M       source/ecosys_ciso_mod.F90
M       bld/build-namelist
M       bld/pop2.buildexe.csh
M       bld/namelist_files/namelist_defaults_pop2.xml
M       bld/namelist_files/namelist_definition_pop2.xml
===============================================================================
Tag Creator: andre
Developers:  andre
Tag Date:    25 Nov 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20141126
Tag Summary: intel15 debug builds mistakenly treat unallocated memory
             on all non-io processors as an error when calling
             write_nstd_netcdf, even though only the ioprocesser
             accesses the memory.

Files Modified:
M       source/diags_on_lat_aux_grid.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    16 Nov 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20141116a
Tag Summary: Fifth step in responding to OS concerns about 1D POP
             implementation - this commit reduces the size of history files in
             1D cases by removing variables remain constant throughout the
             run.

Files Modified:
M       bld/build-namelist
M       bld/namelist_files/namelist_defaults_pop2.xml
M       input_templates/gx3v7_1D_tavg_contents
M       input_templates/gx1v6_1D_tavg_contents
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    16 Nov 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20141116