@@ -2,6 +2,16 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  jedwards
+Tag Date:    3 Dec 2014
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20141203a
+Tag Summary: Update to pio2 API (requires pio1_9_5 or later!)
+
+Files Modified:
+M       source/io_pio.F90
+M       source/io_netcdf.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  mclong
 Tag Date:    3 Dec 2014
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20141203
